# starlink-sat-monitor

./: start.sh
backend/: app.py  cookies.txt  pyproject.toml  test_satellites.py  test_spacetrack.py
backend/collectors/: enhanced_satellites.py  satellites.py  spacetrack.py  starlink.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.vue  style.css
frontend/src/components/: SatelliteGlobe.vue
